<resources>
    <string name="app_name">BotonAyuda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Boton de ayuda</string>
    <string name="nav_header_subtitle">Desarrollado by GeekTic</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_salir">Salir</string>
    <string name="action_call_policia">Llamar al 105</string>
    <string name="action_call_bomberos">Llamar al 119</string>
    <string name="action_call_serenazgo">Llamar al serenazgo</string>
    <string name="action_call_sereno_piura"> Piura (073) 602323</string>
    <string name="action_call_sereno_castilla"> Castilla (073) 347080</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_ubicame">Mapa</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings para login -->
    <string name="text_login">Iniciar Sesion</string>
    <string name="text_input_dni">Ingrese DNI</string>
    <string name="text_input_password">Ingrese pasword</string>
    <string name="text_input_recuerdame">Recuerdame</string>
    <string name="text_input_olvidaste_passworod">Olvidaste su password?</string>
    <string name="text_register">Registrarse</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John </string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_mapa">MapaActivity</string>
</resources>
