<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_policia"
        android:orderInCategory="100"
        android:title="@string/action_call_policia"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bomberos"
        android:orderInCategory="100"
        android:title="@string/action_call_bomberos"/>
    <item
        android:id="@+id/action_serenazgo"
        android:orderInCategory="100"
        android:title="@string/action_call_serenazgo"
        app:showAsAction="never">
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:HTMLCode="http://schemas.android.com/apk/res-auto" >
        <item android:id="@+id/id_sereno_piura"
            android:title="@string/action_call_sereno_piura"
            HTMLCode:showAsAction="ifRoom|withText" />
        <item android:id="@+id/id_sereno_castilla"
            android:title="@string/action_call_sereno_castilla"
            HTMLCode:showAsAction="ifRoom|withText" />
    </menu>
    </item>
    <item
        android:id="@+id/id_action_salir"
        android:orderInCategory="100"
        android:title="@string/action_salir"
        app:showAsAction="never" />
</menu>
