<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Here you can put your logo or brand name -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="240dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-40dp"
                android:text="@string/text_login"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/et_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/text_input_dni"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/color_text_input_login"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/text_input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/color_text_boton_login"
                android:textColorHint="#fff">
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <CheckBox
                android:id="@+id/idrecuerdame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/text_input_recuerdame"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnlogin"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/text_login"
                android:textAllCaps="false"
                android:textColor="@color/color_text_boton_login"
                android:theme="@style/RaisedButtonDark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_register"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_register"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/text_register"
                android:textAllCaps="false"
                android:textColor="@color/color_text_boton_register"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/idforgot"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/text_input_olvidaste_passworod"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>